examples/errors/cyclic_imports/main.aaa
from "foo" import foo

fn main begin nop end
